--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="styles.css">
   <title>JavaScript Progress Bar</title>
 </head>
-
 <body>
-  <main>
+  <main class="content">
     <legend>
       <h1>JavaScript Progress Bar</h1>
     </legend>
@@ -102,5 +100,4 @@
   </main>
   <script type="text/javascript" src="./progressBar.js"></script>
 </body>
-
 </html>
